tests/baselines/reference/collisionThisExpressionAndLocalVarInAccessors(strict=true).errors.txt
collisionThisExpressionAndLocalVarInAccessors.ts(4,23): error TS7006: Parameter 'callback' implicitly has an 'any' type.
collisionThisExpressionAndLocalVarInAccessors.ts(14,23): error TS7006: Parameter 'callback' implicitly has an 'any' type.
collisionThisExpressionAndLocalVarInAccessors.ts(27,23): error TS7006: Parameter 'callback' implicitly has an 'any' type.
collisionThisExpressionAndLocalVarInAccessors.ts(37,23): error TS7006: Parameter 'callback' implicitly has an 'any' type.


==== collisionThisExpressionAndLocalVarInAccessors.ts (4 errors) ====
    class class1 {
        get a(): number {
            var x2 = {
                doStuff: (callback) => () => {
                          ~~~~~~~~
!!! error TS7006: Parameter 'callback' implicitly has an 'any' type.
                    var _this = 2;
                    return callback(this);
                }
            }
    
            return 10;
        }
        set a(val: number) {
            var x2 = {
                doStuff: (callback) => () => {
                          ~~~~~~~~
!!! error TS7006: Parameter 'callback' implicitly has an 'any' type.
                    var _this = 2;
                    return callback(this);
                }
            }
    
        }
    }
    
    class class2 {
        get a(): number {
            var _this = 2;
            var x2 = {
                doStuff: (callback) => () => {
                          ~~~~~~~~
!!! error TS7006: Parameter 'callback' implicitly has an 'any' type.
                    return callback(this);
                }
            }
    
            return 10;
        }
        set a(val: number) {
            var _this = 2;
            var x2 = {
                doStuff: (callback) => () => {
                          ~~~~~~~~
!!! error TS7006: Parameter 'callback' implicitly has an 'any' type.
                    return callback(this);
                }
            }
    
        }
    }